--- a/record.html
+++ b/record.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h1>Stopwatch Records</h1>
-    <ul id="recordsList"></ul>
+    <table id="recordsTable">
+        <thead>
+            <tr>
+                <th>Start</th>
+                <th>End</th>
+                <th>Duration</th>
+            </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
+    <button id="exportCsv">Export as CSV</button>
     <script src="record.js"></script>
 </body>
 </html>
