Change the title and heading of the record.html page to "FlowWatch Records" instead of "Stopwatch Records".

--- a/record.html
+++ b/record.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Stopwatch Records</title>
+    <title>FlowWatch Records</title>
     <link rel="stylesheet" href="record.css">
 </head>
 <body>
-    <h1>Stopwatch Records</h1>
+    <h1>FlowWatch Records</h1>
     <table id="recordsTable">
         <thead>
             <tr>
