feat: Creates new window

--- a/record.html
+++ b/record.html
@@ -14,7 +14,15 @@
             </label>
             <span id="toggleLabel">Binaural Beats</span>
         </div>
+        <div class="switch-container">
+            <label class="switch">
+                <input type="checkbox" id="newWindowToggle">
+                <span class="slider round"></span>
+            </label>
+            <span id="toggleLabel">Create New Window</span>
+        </div>
     <br>
+
     <h1>Records</h1>
         <p id="min-duration-hint">N.B only records times greater than 15 minutes; less is too short for flow</p>
         <table id="recordsTable">
