fix: remove old record system

--- a/record.html
+++ b/record.html
@@ -28,6 +28,8 @@
         </label>
         <span id="toggleLabel">Record on Google Calendar</span>
     </div>
+    <p id="min-duration-hint">N.B only records times greater than 15 minutes; less is too short for flow</p>
+    <h2>Google Calendar Authorization<h2>
     <div class="button-container">
         <button id="authorize_button">Authorize</button>
         <button id="signout_button" style="display: none;">Sign Out</button>
