fix: auto-stop before scheduled event now works

--- a/record.html
+++ b/record.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FlowWatch Records</title>
     <link rel="stylesheet" href="record.css">
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <h1>Options</h1>
@@ -41,6 +42,7 @@
         <button id="authorize_button">Authorize</button>
         <button id="signout_button" style="display: none; background-color:red">Sign Out</button>
     </div>
+    <div id="cal-heatmap"></div>
     <script src="record.js"></script>
 </body>
 </html>
