--- a/record.html
+++ b/record.html
@@ -5,6 +5,10 @@
     <title>FlowWatch Records</title>
     <link rel="stylesheet" href="record.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://unpkg.com/cal-heatmap/dist/cal-heatmap.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/cal-heatmap/dist/plugins/Tooltip.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css">
 </head>
 <body>
     <h1>Options</h1>
@@ -37,7 +41,7 @@
         <span id="toggleLabel">Learning Mode</span>
     </div>
     <p id="min-duration-hint">N.B only records times greater than 15 minutes; less is too short for flow</p>
-    <h2>Google Calendar Authorization<h2>
+    <h2>Google Calendar Authorization</h2>
     <div class="button-container">
         <button id="authorize_button">Authorize</button>
         <button id="signout_button" style="display: none; background-color:red">Sign Out</button>
