--- a/record.html
+++ b/record.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>FlowWatch Records</title>
@@ -10,28 +11,36 @@
     <script src="https://unpkg.com/cal-heatmap/dist/plugins/Tooltip.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/cal-heatmap/dist/cal-heatmap.css">
 </head>
+
 <body>
     <h1>Options</h1>
-        <div class="switch-container">
-            <label class="switch">
-                <input type="checkbox" id="playAudioToggle">
-                <span class="slider round"></span>
-            </label>
-            <span id="toggleLabel">Binaural Beats</span>
-        </div>
-        <div class="switch-container">
-            <label class="switch">
-                <input type="checkbox" id="newWindowToggle">
-                <span class="slider round"></span>
-            </label>
-            <span id="toggleLabel">Create New Window</span>
-        </div>
+    <div class="switch-container">
+        <label class="switch">
+            <input type="checkbox" id="playAudioToggle">
+            <span class="slider round"></span>
+        </label>
+        <span id="toggleLabel">Binaural Beats</span>
+    </div>
+    <div class="switch-container">
+        <label class="switch">
+            <input type="checkbox" id="newWindowToggle">
+            <span class="slider round"></span>
+        </label>
+        <span id="toggleLabel">Create New Window</span>
+    </div>
     <div class="switch-container">
         <label class="switch">
             <input type="checkbox" id="recordCalendarToggle">
             <span class="slider round"></span>
         </label>
         <span id="toggleLabel">Record on Google Calendar</span>
+    </div>
+    <div class="switch-container">
+        <label class="switch">
+            <input type="checkbox" id="ignoreCalendarEventsToggle">
+            <span class="slider round"></span>
+        </label>
+        <span id="toggleLabel">Ignore events on Google Calendar</span>
     </div>
     <div class="switch-container">
         <label class="switch">
@@ -49,4 +58,5 @@
     <div id="cal-heatmap"></div>
     <script src="record.js"></script>
 </body>
+
 </html>
