feat: add month/year view to heatmap

--- a/record.html
+++ b/record.html
@@ -52,7 +52,7 @@
     <p id="min-duration-hint">N.B only records times greater than 15 minutes; less is too short for flow</p>
     <h2>Google Calendar Authorization
         <button id="authorize_button">Authorize</button>
-        <button id="signout_button" style="display: none; background-color:red">Sign Out</button>
+        <button id="signout_button" style="display: none;">Sign Out</button>
     </h2>
     <div class="calendar-controls">
         <div class="view-toggle">
